tests/cannot-apply.stderr
error[E031]: expected type `_ -> _`, got type `crate.core.nat.Nat`
  > ${DIRECTORY}/cannot-apply.lushui:6:21
  |
6 | Abomination: Type = 0 1
  |                     ^ has wrong type
  |
6 | Abomination: Type = 0 1
  |                       - applied to this

error: aborting due to previous error

