tests/cannot-apply.lushui
;;; TEST fail check

@(location "../libs/core/core")
module core

Abomination: Type = 0 1
